# f1r3node-rust

./: .gitattributes  .gitignore  .gitmodules  .mutants.toml  AGENTS.md  CHANGELOG.md  CI_FORK_TEST.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPER.md  GEMINI.md  Justfile  LICENSE.TXT  README.md  SECURITY.md  VERSIONING.md  cliff.toml  coding_guidelines.md  deny.toml  regver-known-issues.md  rust-toolchain.toml  rustfmt.toml  versioned-registry-2026-06-14.md
block-storage/: Cargo.toml  README.md
block-storage/src/: lib.rs
block-storage/src/rust/: key_value_block_store.rs  mod.rs
block-storage/tests/: atomic_buffer_dag_transition.rs  block_dag_storage_test.rs  loom_equivocations_tracker.rs
casper/: Cargo.toml  README.md
casper/benches/: multi_sig_fanout_bench.rs
casper/src/: lib.rs
casper/src/rust/: block_status.rs  casper.rs  casper_conf.rs  epoch.rs  equivocation_detector.rs  errors.rs  estimator.rs  heartbeat_signal.rs  last_finalized_height_constraint_checker.rs  metrics_constants.rs  mod.rs  multi_parent_casper_impl.rs  report_store.rs  reporting_casper.rs  reporting_proto_transformer.rs  safety_oracle.rs  slashing_authorization.rs  synchrony_constraint_checker.rs  system_deploy.rs  validate.rs  validator_identity.rs
casper/tests/: block_creator_memory_profile_spec.rs  compute_parents_post_state_regression_spec.rs  mod.rs  multi_sig_pipeline_spec.rs  multi_sig_runtime_fanout_spec.rs  multi_sig_runtime_integration_spec.rs
casper/tests/add_block/: mod.rs  multi_parent_casper_add_block_spec.rs  multi_parent_casper_atomic_admit_test.rs  proposer_spec.rs
casper/tests/api/: block_query_response_api_test.rs  blocks_response_api_test.rs  bonded_status_api_test.rs  deploy_finalization_status_test.rs  exploratory_deploy_api_test.rs  graph_generator_tests.rs  last_finalized_api_test.rs  listening_name_api_test.rs  machine_verifiable_dag_tests.rs  mod.rs  preview_private_name_test.rs
casper/tests/batch1/: minority_fork_recovery_spec.rs  mod.rs  multi_parent_casper_bonding_spec.rs  multi_parent_casper_communication_spec.rs  multi_parent_casper_deploy_spec.rs  multi_parent_casper_finalization_spec.rs  multi_parent_casper_merge_spec.rs  multi_parent_casper_reporting_spec.rs  multi_parent_casper_rholang_spec.rs  multi_parent_casper_smoke_spec.rs
casper/tests/batch2/: applied_sigs_proposer_cycle_spec.rs  bonding_bug_repro_spec.rs  bonding_bug_runtime_repro_spec.rs  canonical_sibling_recovery_misfire_spec.rs  clique_oracle_test.rs  dedup_orphan_recovery_spec.rs  dup_in_both_filter_spec.rs  estimator_test.rs  finalizer_test.rs  floor_test.rs  limited_parent_depth_spec.rs  lmdb_key_value_store_spec.rs  map_cell_convergence_spec.rs  mod.rs  multi_validator_recovery_spec.rs  pending_canonical_clean_predates_rejection_misfire_spec.rs  recovery_cycle_spec.rs  recovery_repeat_deploy_misfire_spec.rs  rholang_build_test.rs  rnode_key_value_store_manager_spec.rs  single_parent_casper_spec.rs  slash_recovery_spec.rs  validate_test.rs
casper/tests/blocks/: block_creator_spec.rs  block_processor_test.rs  mod.rs
casper/tests/engine/: approve_block_protocol_test.rs  block_approver_protocol_test.rs  engine_cell_test.rs  genesis_ceremony_master_spec.rs  genesis_validator_spec.rs  mod.rs  setup.rs  (+8 more)
comm/: Cargo.toml  README.md  build.rs
comm/src/: lib.rs
comm/tests/: mod.rs  uri_parse_spec.rs  who_am_i_spec.rs
crypto/: Cargo.toml  README.md
crypto/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: block_message_roundtrip.rs  block_replay_auth_mutation.rs  cost_accounting_fuzz_support.rs  cost_accounting_lifecycle_trace.rs  cost_accounting_stateful_campaign.rs  cost_trace_roundtrip.rs  equivocation_detector_paths.rs  processed_deploy_settlement.rs  replay_payload_cost_fields.rs  replay_settlement_differential.rs  runtime_budget_admission.rs  slash_authorization_paths.rs  slash_deploy_roundtrip.rs  slash_lifecycle_trace.rs  slashing_arithmetic.rs  source_descriptor_resource_campaign.rs  support.rs
models/: Cargo.toml  README.md  build.rs
models/src/: lib.rs
models/tests/: json_encoder_test.rs  mixed_algorithm_cosigned_test.rs  mod.rs  par_sort_matcher_test.rs  pathmap_integration_tests.rs  schnorr_deploy_integration_test.rs  scored_term_sort_test.rs  sorted_par_hash_set_test.rs  sorted_par_map_test.rs  var_sort_matcher_test.rs
node/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-commands.sh  docker-entrypoint-rust.sh
node/src/: lib.rs  main.rs
node/tests/: rho_trie_traverser_test.rs  transaction_api_test.rs
rholang/: Cargo.toml  README.md
rholang/benches/: metering_bench.rs
rholang/examples/: numeric-types.rho  pathmap-demo.rho  pathmap-immutability-test.rho  simpleInsertCall.rho  tut-pathmap-all-methods.rho  tut-pathmap-zippers.rho  tut-philosophers.rho  zipper-navigation-demo.rho
rholang/reference_doc/: README.md
rholang/src/: lib.rs  main.rs  rholang_cli.rs
rholang/tests/: PETTA_TESTS_SUMMARY.md  RUN_PETTA_TESTS.sh  abort_spec.rs  concurrent_rspace_architecture_repro_spec.rs  crypto_channels_spec.rs  demo_verification.rs  deploy_data_spec.rs  getsubtrie_spec.rs  interpreter_spec.rs  loom_cost_trace_slots.rs  loom_metering_ownership.rs  loom_multi_sig_fanout.rs  loom_runtime_budget_reconciliation.rs  mod.rs  numeric_types_spec.rs  ollama_integration_test.rs  openai_service_spec.rs  reduce_spec.rs  replay_memory_profile_spec.rs  rholang_numeric_eval_spec.rs  setsubtrie_spec.rs  substitute_test.rs  sugar_regression.rs  swipl_petta_execution_spec.rs  swipl_petta_integration_spec.rs  swipl_petta_replay_spec.rs  where_examples_compile.rs  zipper_advanced_navigation_spec.rs  zipper_path_management_spec.rs  zipper_query_methods_spec.rs
rspace++/: .rustfmt.toml  Cargo.toml  README.md
rspace++/src/: lib.rs  main.rs
rspace++/tests/: concurrent_rspace_architecture_repro_tests.rs  concurrent_rspace_test.rs  export_import_tests.rs  hot_store_spec.rs  install_test.rs  main.rs  mod.rs  replay_rspace_tests.rs  reporting_rspace_tests.rs  storage_actions_test.rs
shared/: Cargo.toml  README.md
shared/src/: lib.rs
(+1569 files in other folders)
