[workspace]
resolver = "2"
members = [
	"casper",
	"rspace++",
	"rholang",
	"shared",
	"node",
	"models",
	"crypto",
	"block-storage",
	"comm",
	"graphz",
]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
	"env-filter",
	"fmt",
	"json",
] }
tracing-log = "0.2"
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
eyre = "0.6"
thiserror = "2.0"
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tonic-prost-build = "0.14"
tower = "0.5"
rand = "0.9"
bincode = "1.3.3"
serde = "1.0"
serde_json = "1.0"
itertools = "0.14"
futures = "0.3"
hex = "0.4"
dashmap = "6.1"
imbl = "7"
regex = "1.12"
async-trait = "0.1"
# All workspace crates must use the same `metrics` version. Different majors
# get separate global recorders, so calls from a crate on a different version
# than the prometheus exporter silently route to a noop recorder.
metrics = "0.23"
stacker = "0.1"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
num-integer = "0.1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.5"
indexmap = "2.8"
lz4_flex = "0.11"
humantime = "2.3"
chrono = { version = "0.4", features = ["serde"] }
proptest = "1.6"
proptest-derive = "0.5"
tempfile = "3.24"
base64 = "0.22"
byteorder = "1.5.0"
blake2 = "0.10.6"
k256 = { version = "0.13.4", features = ["ecdsa"] }
p256 = "0.13"
heed = "0.22.1"
rayon = "1.10"
once_cell = "1.21"
http = "1.0"
bytes = "1"
axum = "0.8"
utoipa = "5"
validated = "1.0"
serial_test = "3.1"
metrics-util = "0.17"
rholang-parser = { git = "https://github.com/F1R3FLY-io/rholang-rs", rev = "d25f953a" }
reqwest = "0.12"

[profile.dev]
debug = true
