[package]
name = "block-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
rspace_plus_plus = { path = "../rspace++" }
models = { path = "../models" }
crypto = { path = "../crypto" }
lz4_flex = "0.11.3"
prost = { workspace = true }
proptest = "1.6.0"
hex = { workspace = true }
dashmap = { workspace = true }
imbl = { workspace = true }
rayon = "1.10.0"
tokio = { workspace = true }
once_cell = "1.21.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }

[build-dependencies]
