[package]
name = "block-storage"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
rspace_plus_plus = { path = "../rspace++" }
models = { path = "../models" }
crypto = { path = "../crypto" }
lz4_flex = { workspace = true }
prost = { workspace = true }
hex = { workspace = true }
dashmap = { workspace = true }
imbl = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[build-dependencies]
