[package]
name = "casper"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
comm = { path = "../comm" }
crypto = { path = "../crypto" }
graphz = { path = "../graphz" }
models = { path = "../models" }
rholang = { path = "../rholang" }
rspace_plus_plus = { path = "../rspace++" }
block-storage = { path = "../block-storage" }
shared = { path = "../shared" }
tokio = { workspace = true }
prost = { workspace = true }
lz4_flex = { workspace = true }
lazy_static = { workspace = true }
hex = { workspace = true }
dashmap = { workspace = true }
imbl = { workspace = true }
indexmap = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
byteorder = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
# LFS Block Requester dependencies
num_cpus = "1.0"
async-stream = "0.3"
tokio-stream = { workspace = true }
humantime = { workspace = true }
tonic = { workspace = true }
eyre = { workspace = true }
metrics = { workspace = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
metrics-util = { workspace = true }
proptest = { workspace = true }
k256 = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }



[features]
default = []
# Exposes test utilities (TestNode, mocks, genesis helpers) to other workspace members.
# Guarded with #[cfg(feature = "test-utils")] so it is never compiled in production.
test-utils = ["tempfile"]
schnorr_secp256k1_experimental = [
    "crypto/schnorr_secp256k1_experimental",
    "models/schnorr_secp256k1_experimental",
]

[build-dependencies]
