[package]
name = "comm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
crypto = { path = "../crypto" }
dashmap = { workspace = true }
flume = "0.11"
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
models = { path = "../models" }
paste = "1.0"
proptest = "1.6.0"
rand = { workspace = true }
shared = { path = "../shared" }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
url = "2.5.4"
# TLS and certificate dependencies
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1"
tokio-rustls = "0.26" 
x509-parser = "0.16"
webpki = "0.22"
rustls-webpki = "0.102"
thiserror = { workspace = true }
p256 = { version = "0.13", features = ["ecdsa"] }
futures = { workspace = true }
tower = { workspace = true}
http = "1.0"
hyper = { version = "1.0", features = ["http1", "http2"] }
tonic = { workspace = true, features = ["transport", "tls-webpki-roots"] }
prost = { workspace = true }
tonic-prost = { workspace = true }
regex = { workspace = true }
igd-next = { version = "0.16.2", features = ["aio_tokio"] }
eyre = { workspace = true }
local-ip-address = "0.6.5"
reqwest = "0.12.24"
metrics = "0.23"

[build-dependencies]
tonic-prost-build = { workspace = true }
