[package]
name = "comm"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
crypto = { path = "../crypto" }
dashmap = { workspace = true }
flume = "0.11"
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
models = { path = "../models" }
paste = "1.0"
rand = { workspace = true }
shared = { path = "../shared" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
url = "2.5.4"
# TLS and certificate dependencies
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1"
tokio-rustls = "0.26" 
x509-parser = "0.16"
webpki = "0.22"
rustls-webpki = "0.102"
thiserror = { workspace = true }
p256 = { workspace = true, features = ["ecdsa"] }
futures = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
hyper = { version = "1.0", features = ["http1", "http2"] }
tonic = { workspace = true, features = ["transport", "tls-webpki-roots"] }
prost = { workspace = true }
tonic-prost = { workspace = true }
regex = { workspace = true }
igd-next = { version = "0.16.2", features = ["aio_tokio"] }
eyre = { workspace = true }
local-ip-address = "0.6.5"
reqwest = { workspace = true }
metrics = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
