[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
schnorr_secp256k1_experimental = ["k256/schnorr"]
# Off-by-default post-quantum signature backends (OQS / liboqs). Pulls in the
# optional `oqs` crate, which builds liboqs from C via cmake (the `vendored`
# feature of `oqs`). NEVER enabled in the default build — see
# crypto/src/rust/signatures/oqs_pq.rs.
oqs_pq_experimental = ["dep:oqs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
base64 = "0.22"
bincode = { workspace = true }
blake2 = "0.10.6"
byteorder = "1.5.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
ff = "0.13.1"
getrandom = "0.2.16"
hex = { workspace = true }
k256 = { version = "0.13.4", features = ["ecdsa"] }
tracing = { workspace = true }
nanorand = "0.7.0"
num-bigint = "0.4.6"
# Optional post-quantum signatures via Open Quantum Safe. `default-features =
# false` drops the KEM families and openssl glue we do not use; `vendored`
# builds liboqs from C through cmake; `sigs` provides ML-DSA / FALCON / SPHINCS+.
# Gated behind the `oqs_pq_experimental` feature — see [features] above.
oqs = { version = "0.11", default-features = false, features = ["std", "sigs", "vendored"], optional = true }
p256 = "0.13"
pkcs8 = "0.10"
prost = { workspace = true }
rand = "0.8"
rand_core = "0.6"
rcgen = "0.13"
serde = { workspace = true, features = ["derive"] }
sha2 = "0.10.8"
shared = { path = "../shared" }
thiserror = { workspace = true }
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
typenum = "1.17.0"
x509-certificate = "0.23"
yasna = { version = "0.5.2", features = ["num-bigint"] }
eyre = { workspace = true }
pem = "3.0"
openssl = "0.10"

[dev-dependencies]
proptest = "1.0"
tempfile = "3.8.0"
base64 = "0.22"
