[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
rspace_plus_plus = { path = "../rspace++" }
shared = { path = "../shared" }
pathmap = "0.2.2"
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { version = "1.2", features = ["v4"] }
itertools = { workspace = true }
proptest-derive = "0.5.1"
proptest = "1.4.0"
rand = "0.9.0"
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
utoipa = "5"
tracing = { workspace = true }

[[test]]
name = "models_tests"
path = "tests/mod.rs"
harness = true

[lib]
name = "models"
path = "src/lib.rs"
doctest = false

[build-dependencies]
tonic-prost-build = { workspace = true }
