[package]
name = "models"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
schnorr_secp256k1_experimental = ["crypto/schnorr_secp256k1_experimental"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
rspace_plus_plus = { path = "../rspace++" }
shared = { path = "../shared" }
pathmap = "0.2.2"
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
itertools = { workspace = true }
proptest-derive = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
utoipa = { workspace = true }
tracing = { workspace = true }

[[test]]
name = "models_tests"
path = "tests/mod.rs"
harness = true

[lib]
name = "models"
path = "src/lib.rs"
doctest = false

[build-dependencies]
tonic-prost-build = { workspace = true }
