[package]
name = "node"
version = "0.4.10"
edition = "2021"

[features]
default = []
schnorr_secp256k1_experimental = [
    "crypto/schnorr_secp256k1_experimental",
    "casper/schnorr_secp256k1_experimental",
    "models/schnorr_secp256k1_experimental",
]

[lib]
doctest = false

[dependencies]
models = { path = "../models" }
crypto = { path = "../crypto" }
rholang = { path = "../rholang" }
shared = { path = "../shared" }
casper = { path = "../casper" }
comm = { path = "../comm" }
rspace_plus_plus = { path = "../rspace++" }
graphz = { path = "../graphz" }
block-storage = { path = "../block-storage" }
base64 = "0.22"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
itertools = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
hocon = "0.9.0"
eyre = { workspace = true }
humantime = "2.3.0"
byte-unit = "5.1.6"
futures = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
colored = "3.0"
rholang-parser = { git = "https://github.com/F1R3FLY-io/rholang-rs", rev = "d25f953a" }
rustyline = "13.0"
rpassword = "7.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = "0.21"
tracing-log = { workspace = true }
dashmap = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
# Web framework dependencies
axum = {version = "0.8", features = ["macros", "ws"]}
tower = { workspace = true}
tower-http = { version = "0.6", features = ["cors", "trace"] }
thiserror = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
tokio = { workspace = true }
tokio-tungstenite = "0.28"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
# Metrics dependencies (analog of Scala's Kamon + NewPrometheusReporter)
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
metrics-exporter-influx = "0.2.2"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-zipkin = { version = "0.19", features = ["reqwest-client"] }
opentelemetry_sdk = { version = "0.20", features = ["rt-tokio"] }
sysinfo = "0.28"
tonic-reflection = "0.14"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
rspace_plus_plus = { path = "../rspace++" }
casper = { path = "../casper", features = ["test-utils"] }
tower = { workspace = true }
serial_test = "3.1"

[build-dependencies]
tonic-prost-build = { workspace = true }
