[package]
name = "rholang"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rholang-cli"
path = "src/rholang_cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
models = { path = "../models" }
shared = { path = "../shared" }
rspace_plus_plus = { path = "../rspace++" }
itertools = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tree-sitter = "0.25.8"
tree-sitter-rust = "0.24"
cc = { version = "1.1.12", features = [] }
hex = { workspace = true }
prost = { workspace = true }
zbase32 = "0.1.2"
lazy_static = "1.5.0"
futures = { workspace = true }
bincode = { workspace = true }
regex = { workspace = true }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
pretty_assertions = "1.3.0"
thiserror = { workspace = true }
k256 = { version = "0.13.4", features = ["ecdsa"] }
openai-api-rs = "6.0.3"
dotenv = "0.15.0"
indexmap = "2.8.0"
rayon = "1.10.0"
tempfile = "3.19.1"
clap = { version = "4.5", features = ["derive"] }
rholang-parser = { git = "https://github.com/F1R3FLY-io/rholang-rs", rev = "d25f953a" }
validated = "1.0.0"
smallvec = { version = "1.15.1", features = [
	"union",
	"const_generics",
	"const_new",
	"may_dangle",
] }
typed-arena = "2.0.2"
num-bigint = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
stacker = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
serde_json = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
cc = "1.0"
