[package]
name = "rholang"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "rholang-cli"
path = "src/rholang_cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
models = { path = "../models" }
shared = { path = "../shared" }
rspace_plus_plus = { path = "../rspace++" }
itertools = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tree-sitter = "0.25.8"
tree-sitter-rust = "0.24"
hex = { workspace = true }
prost = { workspace = true }
zbase32 = "0.1.2"
lazy_static = { workspace = true }
futures = { workspace = true }
bincode = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
k256 = { workspace = true }
openai-api-rs = "6.0.3"
dotenv = "0.15.0"
indexmap = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
clap = { workspace = true }
rholang-parser = { workspace = true }
validated = { workspace = true }
smallvec = { version = "1.15.1", features = [
	"union",
	"const_generics",
	"const_new",
	"may_dangle",
] }
typed-arena = "2.0.2"
num-bigint = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
stacker = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
rust-bert = { version = "0.23.0", optional = true }
console = "0.16.0"
anyhow = "1.0.100"
chroma = { version = "0.10.0", optional = true }
async-trait = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.3.0"
rand = { workspace = true }

[features]
chromadb = ["dep:chroma", "dep:rust-bert"]