[package]
name = "rspace_plus_plus"
version = "0.1.0"
publish = false  # internal workspace crate; not published to crates.io
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
bincode = { workspace = true }
heed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
prost = { workspace = true }
bit-set = "0.5.3"
monadic = "0.5.5"
futures = { workspace = true }
state = "0.6.0"
itertools = { workspace = true }
blake2 = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
blake3 = "1.5.0"
async-trait = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
hex = { workspace = true }
proptest = { workspace = true }
lazy_static = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
rstest = "0.19.0"
proptest-derive = { workspace = true }
counter = "0.5.7"
multiset = "0.0.5"
rholang-parser = { workspace = true }
validated = { workspace = true }
metrics = { workspace = true }
tracing-subscriber = { workspace = true }

[dependencies.uuid]
workspace = true
features = [
	"fast-rng",          # Use a faster (but still sufficiently random) RNG
	"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
test-env-helpers = "0.2.2"
metrics-util = { workspace = true }
