[package]
name = "shared"
version = "0.1.0"
publish = false  # internal workspace crate; not published to crates.io
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
heed = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11.17"
serde_json = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
http-body-util = "0.1"
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
eyre = { workspace = true }
lz4_flex = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
metrics = { workspace = true }
